# Template-repository

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
src/: main.py
